Type System Integration, FFI/unsafe fn count
The plugin now runs  `after_analysis`, allowing it to determine when
unsafe fn calls happen, when FFI calls happen, and (in the future)
when dereferences happen.

Code is written for counting the number of unsafe blocks which use FFI
or other unsafe functions.

Next steps:
   - Pushing the plugin later during compilation revealed that I
     haven't been integrating with cargo properly - gotta solve that
     with rustup/shenanigans.
   - Include unsafe functions in the FFI analysis.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,9 @@ authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]
 
 [dependencies]
 cargo = "0"
-#getopts = "0"
 glob = "0"
 rustc-serialize = "0"
+libc = "0"
 
 [[bin]]
 name = "analyze"
