Dataflow for ptr derefs
Implemented a dataflow which (roughly) notices when a function derefs a
pointer that is passed into it - or anything derived from that pointer.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ libc = "0"
 
 [[bin]]
 name = "analyze"
-path = "src/analyze/main.rs"
+path = "src/main.rs"
 
-[[bin]]
-name = "download"
-path = "src/download/main.rs"
+#[[bin]]
+#name = "download"
+#path = "src/download/main.rs"
