--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,6 @@ libc = "0"
 name = "analyze"
 path = "src/main.rs"
 
-#[[bin]]
-#name = "download"
-#path = "src/download/main.rs"
+[[bin]]
+name = "download"
+path = "src/download/main.rs"
