--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ libc = "0"
 lazy_static = "0.1.*"
 
 [dev-dependencies]
-compiletest_rs = "*"
+compiletest_rs = "0.2.1"
 
 [[bin]]
 name = "analyze"
